SERVER-74501 Fix MigrationBatchFetcher/Inserter completion reliance to not spawn an extra cleanup thread

(cherry picked from commit bf4b3ae9b3eb5c376201135155ef6738bfef0e20)