src/mongo/db/s/migration_batch_inserter.cpp
@@ -169,20 +169,28 @@ void MigrationBatchInserter::run(Status status) const try {
         _migrationProgress->incNumBytes(batchClonedBytes);
 
         if (_writeConcern.needToWaitForOtherNodes() && _threadCount == 1) {
-            runWithoutSession(_outerOpCtx, [&] {
-                repl::ReplicationCoordinator::StatusAndDuration replStatus =
-                    repl::ReplicationCoordinator::get(opCtx)->awaitReplication(
-                        opCtx,
-                        repl::ReplClientInfo::forClient(opCtx->getClient()).getLastOp(),
-                        _writeConcern);
-                if (replStatus.status.code() == ErrorCodes::WriteConcernFailed) {
-                    LOGV2_WARNING(22011,
-                                  "secondaryThrottle on, but doc insert timed out; continuing",
-                                  "migrationId"_attr = _migrationId.toBSON());
-                } else {
-                    uassertStatusOK(replStatus.status);
-                }
-            });
+            if (_secondaryThrottleTicket->tryAcquire()) {
+                TicketHolderReleaser ticketReleaser(_secondaryThrottleTicket);
+
+                runWithoutSession(_outerOpCtx, [&] {
+                    repl::ReplicationCoordinator::StatusAndDuration replStatus =
+                        repl::ReplicationCoordinator::get(opCtx)->awaitReplication(
+                            opCtx,
+                            repl::ReplClientInfo::forClient(opCtx->getClient()).getLastOp(),
+                            _writeConcern);
+                    if (replStatus.status.code() == ErrorCodes::WriteConcernFailed) {
+                        LOGV2_WARNING(22011,
+                                      "secondaryThrottle on, but doc insert timed out; continuing",
+                                      "migrationId"_attr = _migrationId.toBSON());
+                    } else {
+                        uassertStatusOK(replStatus.status);
+                    }
+                });
+            } else {
+                // Ticket should always be available unless thread pool max size 1 setting is not
+                // being respected.
+                dassert(false);
+            }
         }
 
         sleepmillis(migrateCloneInsertionBatchDelayMS.load());
