src/mongo/db/s/migration_batch_mock_inserter.h
@@ -56,7 +56,8 @@ public:
                                UUID,
                                std::shared_ptr<MigrationCloningProgressSharedState>,
                                UUID,
-                               int) {}
+                               int,
+                               TicketHolder*) {}
 
     static void onCreateThread(const std::string& threadName) {}
 
